backend/src/main/java/com/example/syncmeet/error/exception/IdMismatchException.java
package com.example.syncmeet.error.exception;

public class IdMismatchException extends IllegalArgumentException{
    public IdMismatchException(String message) { super(message);}
}
